@@ -11,8 +11,8 @@ public class LogBackendTypeTest {
 	@Test
 	public void testBackends() {
 		for (LogBackendType type : LogBackendType.values()) {
-			if (type == LogBackendType.LOG4J2) {
-				// we have to skip it because it will work under java 8 and fail for < 8
+			if (type == LogBackendType.LOG4J) {
+				// we have to skip it because it is only enabled with a certain profile
 				continue;
 			}
 			if (type == LogBackendType.ANDROID || type == LogBackendType.NULL) {
